Fix lists having the wrong font in mobile mode

--- a/Resources/theme/styles.css
+++ b/Resources/theme/styles.css
@@ -29,7 +29,7 @@ header a:hover {
     color: #000000;
 }
 
-.body p {
+.body p, ul, ol, a {
     font-size: 16px;
     line-height: 22px;
 }
@@ -60,6 +60,32 @@ sub, sup {
   line-height: 0;
 }
 
+/* Force code blocks to wrap */
+pre {
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
+/* Inspired by https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/ */
+blockquote {
+    background: #f9f9f9;
+    border-left: 0.5em solid #ccc;
+    margin: 1em;
+    padding: 0.5em;
+}
+
+blockquote p {
+    display: inline;
+}
+
+/* Solid-line section breaks */
+hr.solid {
+  border-top: 0.1rem solid #fff;
+}
+
 /* Mobile Typography */
 
 @media only screen and (max-width: 767px) {
@@ -73,7 +99,7 @@ sub, sup {
         line-height: 22px;
     }
     
-    .body p {
+    .body p, ul, ol, a {
         font-size: 14px;
         line-height: 17px;
     }
@@ -118,32 +144,6 @@ header {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-}
-
-/* Force code blocks to wrap */
-pre {
-    white-space: pre-wrap;       /* css-3 */
-    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-    white-space: -pre-wrap;      /* Opera 4-6 */
-    white-space: -o-pre-wrap;    /* Opera 7 */
-    word-wrap: break-word;       /* Internet Explorer 5.5+ */
-}
-
-/* Inspired by https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/ */
-blockquote {
-    background: #f9f9f9;
-    border-left: 0.5em solid #ccc;
-    margin: 1em;
-    padding: 0.5em;
-}
-
-blockquote p {
-    display: inline;
-}
-
-/* Solid-line section breaks */
-hr.solid {
-  border-top: 0.1rem solid #fff;
 }
 
 /* Mobile Layout */
